[package]
name = "by_addr"
version = "0.1.0"
authors = ["Artyom Tokarev <tokarev28.art@gmail.com>"]
license = "MIT / Apache-2.0"
description = "Wrapper for comparing and hashing pointers by address"
repository = "https://github.com/tokarevart/by_addr"
documentation = "https://docs.rs/by_addr"
keywords = ["hash", "pointer", "reference", "rc", "arc"]
categories = ["data-structures", "rust-patterns"]
readme = "README.md"
edition = "2018"

[dependencies]
by_address = "1.0"
